# enerlytics.ai

./: .env.example  .gitignore  README.md  pyproject.toml
analysis/: README.md
analysis/notebooks/: 01_eda.ipynb  02_turkiye_geneli_eda.ipynb
analysis/outputs/: monthly_stats.csv  tr81_monthly_risk_band.csv  tr81_province_ranking.csv
data/processed/: pvgis_annual_summary_41.0082_28.9784_2015_2026.csv  pvgis_monthly_41.0082_28.9784_2015_2026.csv
data/raw/pvgis/: historical_41.0082_28.9784_2015_2026.json
src/enerlytics_ai/api/: routes.py
src/enerlytics_ai/app/: config.py  main.py
src/enerlytics_ai/models/: energy_model.py  lcoe_model.py
src/enerlytics_ai/services/: pvgis_data_service.py  solar_data_service.py  solar_model_service.py
src/enerlytics_ai/utils/: helpers.py
